scroll, salwy, photos - 1 pomodoro

--- a/src/app/components/farma/farma.component.html
+++ b/src/app/components/farma/farma.component.html
@@ -6,7 +6,7 @@
   </p><p>Motyle najlepiej karmić raz dziennie rano, karmienie zajmuje zaledwie parę minut. Do karmienia motyli nadaje się soczysta pomarańcza lub inne soczyste owoce. Jeśli zapomnisz karmić motyla to on będzie żył tylko do dwu dni.
   </p><p>Mini-farma motyli zawiera dom motyla, zestaw poczwarek i instrukcję.
   </p>
-  <h5>Instrukcja dla mini-farmy</h5>
+  <!-- <h5>Instrukcja dla mini-farmy</h5>
   <p>Dokładne przestrzeganie instrukcji zwiększy procent przeżywalności motyli.
   </p>
   <ol>
@@ -21,7 +21,7 @@
     <li>Wraz z nadejściem ciemności motyl staje się mniej aktywny (z wyjątkiem gatunków nocnych), zalecamy schować go w pudełku, aby nie zgubić go do rana.</li>
     <li>Życie tropikalnego motyla trwa od 2 do 7 dni. To zależy od warunków hodowli i tego, jak uporządkowała go przyroda.</li>
     <li>Podziel się radością narodzin motyla, dodaj tag <strong>#motyli.pl</strong></li>
-  </ol>
+  </ol> -->
 
   <h5>Czego nie robić:</h5> 
   <ul>
