--- a/src/app/components/salut/salut.component.html
+++ b/src/app/components/salut/salut.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h2 class="centered">Salwy z motyli</h2>
   <p>Niezapomnianym dodatkiem do wydarzenia będą jasne salwy z żywych motyli tropikalnych. Wyjątkowo prosta jest prezentacja salwy: otwierane jest jedno lub kilka pudeł, z których trzepoczą tropikalne motyle. Im więcej motyli w pudełku, tym bardziej spektakularna będzie salwa. Jeżeli kilka motyli nie chce wyjść i woli pozostać w pudełku, nie należy się denerwować -można wtedy robić sobie z nimi zdjęcia, wziąć na dłoń lub umieścić je na swoich ubraniach.
     Niezwykłym prezentem będzie salwa małych, ale jasnych tropikalnych motyli. Takie salwy wyglądają bardzo dynamicznie i widowiskowo.
     </p>
@@ -11,6 +12,8 @@
   <app-card class="adaptive-card" title="Salwa na 10 motyli"  text="Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość." image="assets/images/salwa.jpg"></app-card>
   <app-card class="adaptive-card" title="Salwa na 20 motyli"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/salwa.jpg"></app-card>
   <app-card class="adaptive-card" title="Salwa na 50 motyli"  text="Domowa farma motyli stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych." image="assets/images/salwa.jpg"></app-card>
+  
+  <h2 class="centered" style="margin-top:2rem;">Salwy z motyli na wesele</h2>
   <p>
     Salwy z motyli - najbardziej pamiętna niespodzianka na każdą uroczystość. Nic dziwnego, że są tak popularne w USA i Japonii. Nowożeńcy wypuszczają 20-50 motyli z pudełka podczas gdy goście entuzjastycznie biją brawo. Fotograf w tej chwili może zrobić niezapomniane zdjęcia, które pozostaną pamiątką na całe życie.
   </p>
@@ -20,4 +23,8 @@
   <p>
     Starożytna legenda mówi, że motyle -są trochę jak boscy posłańcy, i że należy złapać motyla, wyszeptać do niego swoje marzenie i uwolnić, on zaniesie pragnienia serca do nieba i życzenie na pewno się spełni.
   </p>
+
+  <img src="assets/images/MG_8384.jpg" alt="Zdięcie">
+  <img src="assets/images/MG_8372.jpg" alt="Zdięcie">
+  <img src="assets/images/MG_8356.jpg" alt="Zdięcie">
 </div>
