--- a/src/app/components/salut/salut.component.scss
+++ b/src/app/components/salut/salut.component.scss
@@ -5,3 +5,11 @@
     height: auto;
     flex-direction: column;
 }
+.centered{
+    text-align: center;
+}
+img{
+    width:100%;
+    height: auto;
+    margin:1rem 0;
+}
