--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -5,13 +5,13 @@
         <a  class="btn flex-shrink-0 home-navigation" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</a>
         <div class="flex-filler"></div>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyli</a>
-        <a class="btn flex-shrink-0 mobile-hidden" routerLink="/salut">Salwy z Motyli</a>
+        <a class="btn flex-shrink-0 mobile-hidden" routerLink="/salwy">Salwy z Motyli</a>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/farma">Mini Farma Motyli</a>
         <a class="btn flex-shrink-0" routerLink="/kontakt">Kontakt</a>
       </div>
       <div class="mobile-visible-flex flex-horizontal flex-filler max-width-100-proc">
         <a class="btn flex-filler" routerLink="/motyle">Nasze Motyli</a>
-        <a class="btn flex-filler" routerLink="/salut">Salwy z Motyli</a>
+        <a class="btn flex-filler" routerLink="/salwy">Salwy z Motyli</a>
         <a class="btn flex-filler" routerLink="/farma">Mini Farma Motyli</a>
       </div>
     </div>
