--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -5,7 +5,7 @@
       </ng-template> 
     <ng-template ngbPanelContent>
       <p class="text">{{faq.text}}</p>
-      <h6 *ngIf="faq.router">Wiencej czytaj w <a [routerLink]="faq.router.link">{{faq.router.text}}</a></h6>
+      <h6 *ngIf="faq.router">Więcej czytaj w <a [routerLink]="faq.router.link">{{faq.router.text}}</a></h6>
     </ng-template>
   </ngb-panel>
 </ngb-accordion>
