--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="flex-filler"></div>
   <div class="header">MENU —
    <div> <div class="flex-filler"></div> <a class="btn" routerLink="/motyle">Katalog motyli tropikalnych</a>  <div class="flex-filler"></div></div>
-   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/salut">Salwy z motyli</a><div class="flex-filler"></div></div>
+   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/salwy">Salwy z motyli</a><div class="flex-filler"></div></div>
    <div> <div class="flex-filler"></div> <a class="btn" routerLink="/farma">Mini farma motyli</a><div class="flex-filler"></div></div>
   </div>
   <div class="flex-filler"></div>
