--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -31,8 +31,8 @@
     <!-- <app-card class="adaptive-card" [title]="card.title"  [subtitle]="card.subtitle" [text]="card.text" [image]="card.image"></app-card> -->
 
 
-    <app-card class="adaptive-card hand-poiner" routerLink="/motyle" title="Katalog"  text="Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość." image="assets/images/towary1-640x426.jpg"></app-card>
-    <app-card class="adaptive-card hand-poiner" routerLink="/salut" title="Salwy"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/towary2-640x426.jpg"></app-card>
+    <app-card class="adaptive-card hand-poiner" routerLink="/motyle" title="Katalog"  text="Unikalnym prezentem i pamiętną niespodzianką na ślub lub rocznicę będzie tropikalny motyl na żywo." image="assets/images/towary1-640x426.jpg"></app-card>
+    <app-card class="adaptive-card hand-poiner" routerLink="/salwy" title="Salwy"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/towary2-640x426.jpg"></app-card>
     <app-card class="adaptive-card hand-poiner" routerLink="/farma" title="Farma"  text="Domowa farma motyli stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych." image="assets/images/towary3-640x426.jpg"></app-card>
     <!--     <div class="adaptive-card hand-poiner"  routerLink="/motyle">
         <img class="card-image" src="assets/images/towary1-640x426.jpg"/>
