--- a/src/app/components/salut/salut.component.html
+++ b/src/app/components/salut/salut.component.html
@@ -5,13 +5,13 @@
     </p>
 
   
-  <app-card class="adaptive-card" title="Mini-salwa na 3 motyle"  text="Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" title="Mini-salwa na 5 motyle"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" title="Mini-salwa na 7 motyle"  text="Domowa farma motyli stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Mini-salwa na 3 motyle"  text="Mała, ale jasna salwa z najpiękniejszych motyli na świecie na rocznice." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Mini-salwa na 5 motyli"  text="Salwa jest popularna jak pojedynczy prezent i miła niespodzianka." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Mini-salwa na 7 motyli"  text="Dynamiczna salwa z tropikalnych motyli na każdą uroczystość." image="assets/images/salwa.jpg"></app-card>
   
-  <app-card class="adaptive-card" title="Salwa na 10 motyli"  text="Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" title="Salwa na 20 motyli"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" title="Salwa na 50 motyli"  text="Domowa farma motyli stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Salwa na 10 motyli"  text="Prawdziwa niespodzianka na imprezę firmową lub prezentacje produktu." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Salwa na 20 motyli"  text="Extra-prezent na wesele: zdjęcia z pięknymi motylami zostaną na lata." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" title="Salwa na 50 motyli"  text="Niezapomniane widowiskowy spektakl na wesele lub wielką imprezę." image="assets/images/salwa.jpg"></app-card>
   
   <h2 class="centered" style="margin-top:2rem;">Salwy z motyli na wesele</h2>
   <p>
