--- a/src/app/components/farma/farma.component.html
+++ b/src/app/components/farma/farma.component.html
@@ -1,5 +1,6 @@
 <div>
   <h2 class="centered">Farma motyli</h2>
+
   <p>Domowa farma motyli będzie wspaniałym prezentem dla dziecka. Obserwując metamorfozę motyla, dziecko uczy się przyrody i otrzymuje niezapomniane wrażenia. Motyle tropikalne  są bardzo duże i kolorowe, takie jakich nie znajdziesz w naszych szerokościach geograficznych.
   </p><p>W końcu możesz na własne oczy przekonać się, jak powstaje najpiękniejsza i zwiewna kreacja natury, ponieważ motyl, rodzi się z nieruchomej poczwarki. Twoje dociekliwe dziecko będzie obserwować życie motyla w domu. Motyl i domowa farma motyli - stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych. Motyle, wyhodowane w domu, nie boją się człowieka i mogą być trzymane w rękach, a nawet karmione.
   </p><p>Motyle są świetnym zwierzakiem domowym, ponieważ nie zajmują dużo miejsca i nie wywołują alergii. Nowonarodzone motyle żyją od kilku dni do kilku tygodni. Oczekiwana długość życia zależy od charakteru i starannej opieki.
@@ -23,7 +24,8 @@
     <li>Podziel się radością narodzin motyla, dodaj tag <strong>#motyli.pl</strong></li>
   </ol> -->
 
-  <img src="assets/images/farma_1280.jpg" style="width:100%;height:auto;" />
+  <app-card class="adaptive-card" staraCena="240" cena="180" title="Mini Farma na 3 motyle"  text="Otrzymaj niezapomniane wrażenia od metamorfozy motyla." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" staraCena="400" cena="280" title="Mini Farma na 5 motyli"  text="Ciekawą zabawką edukacyjną dla dzieci również dla dorosłych." image="assets/images/salwa.jpg"></app-card>
 
   <h2 class="centered">Instrukcje dotyczące życia motyla</h2>
   
@@ -59,4 +61,7 @@
     <li>nie wypuszczać motyli na łono przyrody.</li>
   </ul>
 
+  <img src="assets/images/farma_1280.jpg" style="width:100%;height:auto;" />
+
+  <app-skontaktuj></app-skontaktuj>
 </div>
