--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="flex-shrink-0 flex-filler">
   <div class="flex-filler"></div>
   <div class="header">MENU —
-   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/motyle">Katalog motyli tropikalnych</a>  <div class="flex-filler"></div></div>
+   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/motyle">Katalog motyli</a>  <div class="flex-filler"></div></div>
    <div> <div class="flex-filler"></div> <a class="btn" routerLink="/salwy">Salwy z motyli</a><div class="flex-filler"></div></div>
    <div> <div class="flex-filler"></div> <a class="btn" routerLink="/farma">Mini farma motyli</a><div class="flex-filler"></div></div>
   </div>
@@ -10,12 +10,13 @@
     <a class="btn" routerLink="/dostawa">Dostawa i platność</a>
     <a class="btn" routerLink="/faq">FAQ - częste pytania</a>
     <a class="btn" routerLink="/regulamin">Regulamin</a>
+    <a class="btn" routerLink="/rodo">Polityka prywatności</a>
     <a class="btn" routerLink="/kontakt">Kontakt</a>
   </div>
   <div class="flex-filler"></div>
-  <div class="header">DOLĄCZ DO NAS —
-    <a class="btn">FB</a>
-    <a class="btn">Insta</a>
+  <div class="header">DOLĄCZ —
+    <a class="btn">Facebook</a>
+    <a class="btn">Instagram</a>
   </div>
   <div class="flex-filler"></div>
 </footer>
