--- a/src/app/components/motyle/motyle.component.html
+++ b/src/app/components/motyle/motyle.component.html
@@ -1,3 +1,6 @@
 <div>
   <app-card *ngFor="let card of cards" class="adaptive-card" [title]="card.title"  [subtitle]="card.subtitle" [text]="card.text" [image]="card.image"></app-card>
 </div>
+
+<p class="nieobecne"><strong>Podane wyżej rodzaje motyli mogą być sezonowo nieobecne. Lista dostępnych motyli wysyłana na żądanie.</strong></p>
+<app-skontaktuj></app-skontaktuj>
