--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -43,6 +43,35 @@ div.toolbar > button{
 
     padding: 1.5rem;
 }
+
+#sliding-popup {
+    visibility: hidden;
+    min-width: 100%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    bottom: 0px;
+    font-size: 17px;
+}
+
+#sliding-popup.show {
+    visibility: visible;
+    -webkit-animation: fadein 2s;
+    animation: fadein 2s;
+}
+
+@-webkit-keyframes fadein {
+    from {opacity: 0;} 
+    to {opacity: 0.9;}
+}
+@keyframes fadein {
+    from {opacity: 0;}
+    to {opacity: 0.9;}
+}
 //-----------------------big-desktop------------------------
 .mobile-hidden {
     display:block;
