--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -4,6 +4,7 @@
     position: relative;
     padding: 24px;
     border-radius: 2px;
+    border-top: 1px solid #eeeeee;
 }
 img{
     width:100%;
@@ -16,4 +17,21 @@ img{
 
 .title{
     font-size:x-large;
+}
+
+// p{
+//     margin:0;
+// }
+.staraCena,
+.cena{
+    font-weight: bold;
+    font-size:large;
+    display: flex;
+}
+.staraCena{
+    text-decoration: line-through;
+    margin-right: 1rem;
+}
+.nowaCena{
+    color: darkred;
 }
