--- a/src/app/components/motyle/motyle.component.scss
+++ b/src/app/components/motyle/motyle.component.scss
@@ -4,7 +4,10 @@
     width: 50%; // Show 3 images in a row normally
     height: auto;
 }
-
+p.nieobecne{
+  margin-top:1rem;
+  font-size:large;
+}
 @media (max-width: 600px) {
   .adaptive-card {
     width: 100%; // Override width to show only one image in a row on smaller screens
