--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -4,13 +4,13 @@
       <div class="flex-horizontal flex-filler max-width-100-proc" >
         <a  class="btn flex-shrink-0 home-navigation" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</a>
         <div class="flex-filler"></div>
-        <a class="btn flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyli</a>
+        <a class="btn flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyle</a>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/salwy">Salwy z Motyli</a>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/farma">Mini Farma Motyli</a>
         <a class="btn flex-shrink-0" routerLink="/kontakt">Kontakt</a>
       </div>
       <div class="mobile-visible-flex flex-horizontal flex-filler max-width-100-proc">
-        <a class="btn flex-filler" routerLink="/motyle">Nasze Motyli</a>
+        <a class="btn flex-filler" routerLink="/motyle">Nasze Motyle</a>
         <a class="btn flex-filler" routerLink="/salwy">Salwy z Motyli</a>
         <a class="btn flex-filler" routerLink="/farma">Mini Farma Motyli</a>
       </div>
@@ -31,7 +31,7 @@
   <div id="sliding-popup" [ngClass]="showCookies()">
       <div>
         <a (click)="acceptCookies()" class="btn btn-outline-primary" style="float:right;"><i class="fas fa-window-close"></i></a>
-        <h5>Strona korzysta z plików cookie w celu efektywnej realizacji usług.</h5>
+        <h5>Strona korzysta z plików cookies w celu efektywnej realizacji usług.</h5>
         
       </div>
       <div style="display:flex;">
