--- a/src/app/components/dostawa/dostawa.component.html
+++ b/src/app/components/dostawa/dostawa.component.html
@@ -10,7 +10,7 @@
 </p><p>Dostawy przez kuriera realizowane są  w poniedziałek, wtorek, środę, czwartek, piątek  w godzinach od 8:00 do 18:00 oraz sobotę w godzinach od 8:00 do 15:00.
 </p><p>Odbiór osobisty na terenie Krakowa realizowany za wcześniejszym porozumieniem. 
 </p><p>Opłata zamówienia odbywa się na rachunek bankowy.
-</p><p>Aby motyle zostały dostarczone, zamówienie należy złożyć za 7-14 dni. Potwierdzenie opłaty należy wysłać na motyli.bok@gmail.com .
+</p><p>Aby motyle zostały dostarczone, zamówienie należy złożyć za 7-14 dni przed planowanym prezentem. Potwierdzenie opłaty należy wysłać na motyli.bok@gmail.com .
 </p><p>Wskaźnik urodzeń motyli wynosi 70-80%. Jeśli motyl narodzi się podczas dostawy, wymienimy go na własny koszt, pod warunkiem, że zdjęcie zostanie dostarczone w dniu dostawy.
 </p><p>W dniach 21 stycznia (Dzień Babci), 14 lutego (Walentynki), 8 marca (Dzień Kobiet) oraz 26 maja (Dzień Matki) każdego roku realizacja dostawy przesyłek motyli do odbiorców odbywa się w godzinach od 8:00 do 20:00 bez możliwości wyboru przedziału godzinowego.
 </p>
