--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,14 +7,14 @@
   </div>
   <div class="flex-filler"></div>
   <div class="header">O NAS —
-    <a class="btn" routerLink="/dostawa">Dostawa i platność</a>
+    <a class="btn" routerLink="/dostawa">Dostawa i płatność</a>
     <a class="btn" routerLink="/faq">FAQ - częste pytania</a>
     <a class="btn" routerLink="/regulamin">Regulamin</a>
     <a class="btn" routerLink="/rodo">Polityka prywatności</a>
     <a class="btn" routerLink="/kontakt">Kontakt</a>
   </div>
   <div class="flex-filler"></div>
-  <div class="header">DOLĄCZ —
+  <div class="header">DOŁĄCZ —
     <a class="btn">Facebook</a>
     <a class="btn">Instagram</a>
   </div>
