--- a/src/app/components/salut/salut.component.html
+++ b/src/app/components/salut/salut.component.html
@@ -1,21 +1,21 @@
 <div>
   <h2 class="centered">Salwy z motyli</h2>
   <p>Niezapomnianym dodatkiem do wydarzenia będą jasne salwy z żywych motyli tropikalnych. Wyjątkowo prosta jest prezentacja salwy: otwierane jest jedno lub kilka pudeł, z których trzepoczą tropikalne motyle. Im więcej motyli w pudełku, tym bardziej spektakularna będzie salwa. Jeżeli kilka motyli nie chce wyjść i woli pozostać w pudełku, nie należy się denerwować -można wtedy robić sobie z nimi zdjęcia, wziąć na dłoń lub umieścić je na swoich ubraniach.
-    Niezwykłym prezentem będzie salwa małych, ale jasnych tropikalnych motyli. Takie salwy wyglądają bardzo dynamicznie i widowiskowo.
+    Niezwykłym prezentem będzie salwa małych, ale jasnych tropikalnych motyli. Takie salwy wyglądają bardzo dynamicznie i widowiskowo.
     </p>
 
   
-  <app-card class="adaptive-card" cena="150" title="Mini-salwa na 3 motyle"  text="Mała, ale jasna salwa z najpiękniejszych motyli na świecie na rocznice." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" cena="250" title="Mini-salwa na 5 motyli"  text="Salwa jest popularna jak pojedynczy prezent i miła niespodzianka." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" cena="150" title="Mini-salwa na 3 motyle"  text="Mała, ale jasna salwa z najpiękniejszych motyli na świecie na rocznicę." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" cena="250" title="Mini-salwa na 5 motyli"  text="Salwa jest popularna jako pojedynczy prezent i miła niespodzianka." image="assets/images/salwa.jpg"></app-card>
   <app-card class="adaptive-card" cena="350" title="Mini-salwa na 7 motyli"  text="Dynamiczna salwa z tropikalnych motyli na każdą uroczystość." image="assets/images/salwa.jpg"></app-card>
   
-  <app-card class="adaptive-card" staraCena="500" cena="430" title="Salwa na 10 motyli"  text="Prawdziwa niespodzianka na imprezę firmową lub prezentacje produktu." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" staraCena="500" cena="430" title="Salwa na 10 motyli"  text="Prawdziwa niespodzianka na imprezę firmową lub prezentację produktu." image="assets/images/salwa.jpg"></app-card>
   <app-card class="adaptive-card" cena="1 000" title="Salwa na 25 motyli"  text="Extra-prezent na wesele: zdjęcia z pięknymi motylami zostaną na lata." image="assets/images/salwa.jpg"></app-card>
   <app-card class="adaptive-card" cena="2 000" title="Salwa na 50 motyli"  text="Niezapomniane widowiskowy spektakl na wesele lub wielką imprezę." image="assets/images/salwa.jpg"></app-card>
   
   <h2 class="centered" style="margin-top:2rem;">Salwy z motyli na wesele</h2>
   <p>
-    Salwy z motyli - najbardziej pamiętna niespodzianka na każdą uroczystość. Nic dziwnego, że są tak popularne w USA i Japonii. Nowożeńcy wypuszczają 20-50 motyli z pudełka podczas gdy goście entuzjastycznie biją brawo. Fotograf w tej chwili może zrobić niezapomniane zdjęcia, które pozostaną pamiątką na całe życie.
+    Salwy z motyli - najbardziej pamiętna niespodzianka na każdą uroczystość. Nic dziwnego, że są tak popularne w USA i Japonii. Nowożeńcy wypuszczają 20-50 motyli z pudełka podczas gdy goście entuzjastycznie biją brawo. Fotograf w tej chwili może zrobić niezapomniane zdjęcia, które pozostaną pamiątką na całe życie.
   </p>
   <p>
     Wyobraź sobie: w pewnym momencie otwiera się skrzynia, a stamtąd jaskrawe kolorowe motyle wylatują we wszystkie strony. Motyle rozrzucone po hali trafiają do źródeł światła.
