--- a/src/app/components/farma/farma.component.html
+++ b/src/app/components/farma/farma.component.html
@@ -1,10 +1,10 @@
 <div>
   <h2 class="centered">Farma motyli</h2>
 
-  <p>Domowa farma motyli będzie wspaniałym prezentem dla dziecka. Obserwując metamorfozę motyla, dziecko uczy się przyrody i otrzymuje niezapomniane wrażenia. Motyle tropikalne  są bardzo duże i kolorowe, takie jakich nie znajdziesz w naszych szerokościach geograficznych.
+  <p>Domowa farma motyli będzie wspaniałym prezentem dla dziecka. Obserwując metamorfozę motyla, dziecko uczy się przyrody i otrzymuje niezapomniane wrażenia. Motyle tropikalne  są bardzo duże i kolorowe, takie jakich nie znajdziesz w naszych szerokościach geograficznych.
   </p><p>W końcu możesz na własne oczy przekonać się, jak powstaje najpiękniejsza i zwiewna kreacja natury, ponieważ motyl, rodzi się z nieruchomej poczwarki. Twoje dociekliwe dziecko będzie obserwować życie motyla w domu. Motyl i domowa farma motyli - stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych. Motyle, wyhodowane w domu, nie boją się człowieka i mogą być trzymane w rękach, a nawet karmione.
-  </p><p>Motyle są świetnym zwierzakiem domowym, ponieważ nie zajmują dużo miejsca i nie wywołują alergii. Nowonarodzone motyle żyją od kilku dni do kilku tygodni. Oczekiwana długość życia zależy od charakteru i starannej opieki.
-  </p><p>Motyle najlepiej karmić raz dziennie rano, karmienie zajmuje zaledwie parę minut. Do karmienia motyli nadaje się soczysta pomarańcza lub inne soczyste owoce. Jeśli zapomnisz karmić motyla to on będzie żył tylko do dwu dni.
+  </p><p>Motyle są świetnym zwierzakiem domowym, ponieważ nie zajmują dużo miejsca i nie wywołują alergii. Nowonarodzone motyle żyją od kilku dni do kilku tygodni. Oczekiwana długość życia zależy od charakteru i starannej opieki.
+  </p><p>Motyle najlepiej karmić raz dziennie rano, karmienie zajmuje zaledwie parę minut. Do karmienia motyli nadaje się soczysta pomarańcza lub inne soczyste owoce. Jeśli zapomnisz karmić motyla to on przeżyje tylko do dwu dni.
   </p><p>Mini-farma motyli zawiera dom motyla, zestaw poczwarek i instrukcję.
   </p>
   <!-- <h5>Instrukcja dla mini-farmy</h5>
@@ -24,8 +24,8 @@
     <li>Podziel się radością narodzin motyla, dodaj tag <strong>#motyli.pl</strong></li>
   </ol> -->
 
-  <app-card class="adaptive-card" staraCena="240" cena="180" title="Mini Farma na 3 motyle"  text="Otrzymaj niezapomniane wrażenia od metamorfozy motyla." image="assets/images/salwa.jpg"></app-card>
-  <app-card class="adaptive-card" staraCena="400" cena="280" title="Mini Farma na 5 motyli"  text="Ciekawą zabawką edukacyjną dla dzieci również dla dorosłych." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" staraCena="240" cena="180" title="Mini Farma na 3 motyle"  text="Przeżyj niezapomniane chwile obserwująć metamorfozy motyli." image="assets/images/salwa.jpg"></app-card>
+  <app-card class="adaptive-card" staraCena="400" cena="280" title="Mini Farma na 5 motyli"  text="Ciekawą zabawką edukacyjną dla dzieci i dorosłych." image="assets/images/salwa.jpg"></app-card>
 
   <h2 class="centered">Instrukcje dotyczące życia motyla</h2>
   
@@ -34,11 +34,11 @@
 
   <p><strong>1.Temperatura i wilgotność.</strong> Temperatura, w której motyl czuje się komfortowo i jest aktywny, wynosi +25-30 * С, tj. temperatura pokojowa lub wyższa. W temperaturze + 20 * C motyl będzie dość spokojny. Jednak poniżej + 12 * C tropikalnych motyli nie można ochłodzić w żadnym wypadku - mogą one umrzeć lub stracić zdolność latania.
   </p><p><strong>2. Oświetlenie</strong> powinno być jasne, warto pamiętać, że motyl zawsze leci do światła - jest to konieczne, aby był aktywny. W pokoju trzeba zamknąć okna, aby motyl nie wyleciał przez otwarte okno lub nie zawiesił się na zasłonie okna i nie uszkodził skrzydeł.
-  Aby skrzydełka motyla nie wyschły, należy spryskać je z pistoletu natryskowego (jak do roślin doniczkowych) z odległości 1 metra.
+  Aby skrzydełka motyla nie wyschły, należy spryskać je z pistoletu natryskowego (jak do roślin doniczkowych) z odległości 1 metra dwa razy dziennie.
 </p><p><strong>3. Karmienie</strong> motyla jest bardzo fascynującym procesem. Istnieją dwa rodzaje karmienia motyli: miąższem dojrzałych owoców lub nektarem kwitnących kwiatów.
   </p>
 <ul><li> <p>
-<strong>Miłośnicy owoców.</strong> Blue Morpho Motyl, Kaliga Atreus, Moonlight Butterfly, Goldeneye Biblis, Sylvia Tiger rozpoznać potrawę zapachu i smaku, ponieważ kubki smakowe są na czubkach przednich kończyn! Dlatego takie motyle muszą najpierw lekko "wkroczyć" w ich przyszły pokarm, czy to kroplę słodkiego soku owocowego czy dojrzałej brzoskwini czy banana. Na posiłek motyl rozwija trąbkę i zaczyna pić słodki nektar. Śmieszne, ale motyle "owocowe" nie pozostają obojętne na wino. Nie należy jednak go nadużywać. Kroplę wina można dodać tylko do kawałka owocu, z którego motyl pije sok.
+<strong>Miłośnicy owoców.</strong> Blue Morpho Motyl, Kaliga Atreus, Moonlight Butterfly, Goldeneye Biblis, Sylvia Tiger mogą rozpoznać potrawę po zapachu i smaku, ponieważ kubki smakowe są na czubkach przednich kończyn! Dlatego takie motyle muszą najpierw lekko "wkroczyć" w ich przyszły pokarm, czy to kroplę słodkiego soku owocowego czy dojrzałej brzoskwini czy banana. Na posiłek motyl rozwija trąbkę i zaczyna pić słodki nektar. Śmieszne, ale motyle "owocowe" nie pozostają obojętne na wino. Nie należy jednak go nadużywać. Kroplę wina można dodać tylko do kawałka owocu, z którego motyl pije sok.
   Jak karmić motyla? Delikatnie sadzimy go na świeżo ściętej soczystej cząstce pomarańczy, tak aby łapki motyla dotykały soku.
   Jeśli motyl odlatuje od jedzenia przez cały czas, możesz poczekać, aż usiądzie gdzieś, a następnie przynieść mu owoce, delikatnie popychając przednią stopę owocem. W takim przypadku motyl sam może “podłączyć się” do owocu i rozprowadzić trąbkę.
   Pamiętaj, że każdy motyl ma charakter i nastrój. Bądź cierpliwy dla swojego nowego przyjaciela.
@@ -47,7 +47,7 @@
   <li><p>
   <strong>Miłośnicy nektaru.</strong> Drugiemu rodzajowi motyli spodobają się jasne kwiaty w oświetlonym pokoju - dzięki temu poczuje się bliżej naturalnego środowiska. Polskie kwiaty wystarczą, bo najważniejsza jest obecność pyłków, jasne kolory i mocny aromat.
   Motyle tego rodzaju kochają słodkie syropy. Trzeba rozcieńczyć cukier z wodą w stosunku 1:10. Kroplę nektaru należy nakładać na płaską i szorstką powierzchnię. Na przykład drewniana deska do krojenia.
-  Może się czasem zdarzyć, że musimy pomóc naszemu motylu z jedzeniem, zanurzając końcówkę trąbki w nektarze. Jak to zrobić?
+  Może się czasem zdarzyć, że musimy pomóc naszemu motylowi z jedzeniem, zanurzając końcówkę trąbki w nektarze. Jak to zrobić?
   Weź motyla za podstawę skrzydeł blisko głowy. Nie trzymaj motyla za skrzydła, ponieważ możesz je uszkodzić. Drugą ręką włóż wykałaczkę (lub szpilkę) do pierścienia trąbki i po prostu opuść ją w dół, obracając trąbkę motyla. Kiedy wierzchołek trąby dotknie kropli nektaru, możesz uwolnić motyla, powinien wtedy zjeść go sam.
   <img src="assets/images/nectar_1280.jpg" style="width:100%;height:auto;" /></p>
 </li></ul>
