--- a/src/app/components/kontakt/kontakt.component.html
+++ b/src/app/components/kontakt/kontakt.component.html
@@ -18,9 +18,9 @@
 <h5 class='margin-top'>Skontaktuj się z nami</h5>
 <form class="kontakt-form">
   <div class="flex-column">
-    <a class="btn btn-outline-primary" href="http://m.me/margaryta.e" ><i class="fab fa-facebook-messenger"></i>fb messenger: margaryta.e</a>
-    <a class="btn btn-outline-primary" href="mailto:motyli.bok@gmail.com"><i class="fas fa-at"></i>m.yevtuh@gmail.com</a>
-    <a class="btn btn-outline-primary"><i class="fas fa-mobile-alt"></i>535-768-070</a>
+    <a class="btn btn-outline-primary" href="http://m.me/***" ><i class="fab fa-facebook-messenger"></i>fb messenger: ***</a>
+    <a class="btn btn-outline-primary" href="mailto:***@gmail.com"><i class="fas fa-at"></i>***@gmail.com</a>
+    <a class="btn btn-outline-primary"><i class="fas fa-mobile-alt"></i>537-***-***</a>
   </div> 
   <div class="flex-filler"></div>
 </form>
